dev-ha/templates/netdata-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
  name: netdata
  labels:
      name: netdata
spec:
  rules:
  - host: netdata.k8s.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: netdata
          servicePort: 19999
