dev-ha/templates/weave.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: weave
  annotations:
    kubernetes.io/ingress.class: traefik
  name: weave-scope
  labels:
      name: weave-scope
spec:
  rules:
  - host: weave.k8s.local
    http:
      paths:
      - backend:
          serviceName: weave-scope-app
          servicePort: 80
        path: /
        pathType: Prefix
